--- a/src/Utils/Create/Create.css
+++ b/src/Utils/Create/Create.css
@@ -1,11 +1,14 @@
 /* src/components/DetailWindow/Create.css */
 
 .create {
+    position: relative; /* 让子元素相对这个容器定位 */
     margin: 0 auto;
     border: 2px solid #ccc; /* 边框颜色和宽度 */
     border-radius: 10px; /* 设置圆角 */
     padding: 20px; /* 内边距 */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* 可选：增加阴影效果 */
+    /*width: 90%;*/
+    /*max-width: 500px; !* 适当调整宽度 *!*/
 }
 
 .create input {
@@ -19,4 +22,14 @@
     padding: 10px 20px;
     margin: 10px;
     cursor: pointer;
+}
+
+/* 右下角 Tips 样式 */
+.create .tips {
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+    font-size: 12px;
+    color: #888; /* 让提示信息颜色稍浅 */
+    font-style: italic;
 }
